--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,13 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/daisyui@2.14.3/dist/full.css" rel="stylesheet" type="text/css" />
-  <title>signup</title>
-</head>
-<body>
 
 <div class="justify-center flex mt-40">
  <form id="signup-form" class="form">
@@ -27,7 +17,4 @@
  </form>
 </div>
 
-  <script src="https://cdn.tailwindcss.com"></script>
-</body>
-</html>
-
+<script src="/js/signup.js"></script>
