fix homepage logo to route back to homepage

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
                 </label>
                 <ul tabindex="0" class="menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52">
               </div>
-               <a href="/homepage" class=" normal-case text-xl ml-8"><img id="gitLogo" src="/images/gitprologo.png" width="150px" height="150px">
+               <a href="/" class=" normal-case text-xl ml-8"><img id="gitLogo" src="/images/gitprologo.png" width="150px" height="150px">
             </div>
             <div class="navbar-center hidden lg:flex">
               <ul class="menu menu-horizontal p-0">
