--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -5,8 +5,8 @@
     <div class="card-body items-center text-center">
       <h2 class="card-title">Login</h2><br>
       <div class="form-control w-full max-w-xs">
-        <input for="exampleInputUsername1" id="username-login" type="username" placeholder="Username" class="place-self-center text-neutral input input-bordered input-primary w-64 max-w-xs mb-4" autofocus="true" />
-        <input for-"exampleInputPassword1" id="password-login" type="password" placeholder="Password" class="place-self-center text-neutral input input-bordered input-primary w-64 max-w-xs mb-4" autofocus="true"/>
+        <input for="exampleInputUsername1" id="username-login" type="username" placeholder="Username" class="place-self-center text-primary-content input input-bordered input-primary w-64 max-w-xs mb-4" autofocus="true" />
+        <input for-"exampleInputPassword1" id="password-login" type="password" placeholder="Password" class="place-self-center text-primary-content input input-bordered input-primary w-64 max-w-xs mb-4" autofocus="true"/>
       </div>
       <div class="card-actions justify-end">
         <button class="btn btn-primary btn-wide btn-active hover:bg-primary" type="submit">Sign in</button>
