fix login page to direct ot profile page

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,12 +1,12 @@
 
-<div id="login-form"  class="justify-center flex mt-40 ml-4 mr-4">
-  <form class="form">
+<div class="justify-center flex mt-40 ml-4 mr-4">
+  <form class="form" id="login-form">
   <div class="card w-96 bg-neutral text-neutral-content">
     <div class="card-body items-center text-center">
       <h2 class="card-title">Login</h2><br>
       <div class="form-control w-full max-w-xs">
-        <input for="exampleInputUsername1" id="username-login" type="username" placeholder="Username" class="place-self-center text-primary-content input input-bordered input-primary w-64 max-w-xs mb-4" autofocus="true" />
-        <input for-"exampleInputPassword1" id="password-login" type="password" placeholder="Password" class="place-self-center text-primary-content input input-bordered input-primary w-64 max-w-xs mb-4" autofocus="true"/>
+        <input id="username-login" type="username" placeholder="Username" class="place-self-center text-primary-content input input-bordered input-primary w-64 max-w-xs mb-4" autofocus="true" />
+        <input id="password-login" type="password" placeholder="Password" class="place-self-center text-primary-content input input-bordered input-primary w-64 max-w-xs mb-4" autofocus="true"/>
       </div>
       <div class="card-actions justify-end">
         <button class="btn btn-primary btn-wide btn-active hover:bg-primary" type="submit">Sign in</button>
