add images and text to info sections

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,21 +1,22 @@
 
-    <main>
-        <div class="flex flex-row">
+    
+        <div class="flex flex-row mt-48">
         <div class="mt-24 ml-20">
             <h2>Git Productive With Us!</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-            <button class="btn">Button</button>
+            <button class="btn"><a href="#about-me">Button</a></button>
         </div>
-        <img src="images/examplephoto.png" alt="image">
+        <img id="homepageImage" src="images/code-pic.jpg" alt="homepage coding image">
         </div>
      
 <!-- info cards -->
     <div class="flex flex-row">
         <!-- info card 1 -->
         <div class="card w-96 bg-neutral shadow-xl basis-1/4 infocard m-2">
+        <figure><img src="/images/stayactive.PNG" alt="dont quit sign" width="455px" height="250px"/></figure>
             <div class="card-body">
-              <h2 class="card-title">Card title!</h2>
-              <p>If a dog chews shoes whose shoes does he choose?</p>
+              <h2 class="card-title">Get Active!</h2>
+              <p> Do you ever feel stiff by the end of your work day from sitting in the same spot for eight hours straight? No worries, we got you! Add Git Produtive to your technologies used because we will be your guide from start to finish in your project, letting you know when it is time to get up and move around your body. We have an exercise guide if you feel like you are not sure what to do.</p>
               <div class="card-actions">
               </div>
             </div>
@@ -23,8 +24,9 @@
     
         <!-- info card 2 -->
           <div class="card w-96 bg-neutral shadow-xl basis-1/4 infocard m-2">
+          <figure><img src="images/bestpart1.PNG" alt="best part image" width="455px" height="250px"/></figure>
             <div class="card-body">
-              <h2 class="card-title">Card title!</h2>
+              <h2 class="card-title">Keep Losing Code?</h2>
               <p>If a dog chews shoes whose shoes does he choose?</p>
               <div class="card-actions">
               </div>
@@ -33,8 +35,9 @@
 
           <!-- info card 3 -->
           <div class="card w-96 bg-neutral shadow-xl basis-1/4 infocard m-2">
+          <figure><img src="images/dontquit.PNG" alt="Shoes" width="455px" height="250px"/></figure>
             <div class="card-body">
-              <h2 class="card-title">Card title!</h2>
+              <h2 class="card-title">Stay Organized Start To Finish</h2>
               <p>If a dog chews shoes whose shoes does he choose?</p>
               <div class="card-actions">
               </div>
@@ -43,8 +46,9 @@
 
           <!-- info card 4 -->
           <div class="card w-96 bg-neutral shadow-xl basis-1/4 infocard m-2">
+          <figure><img src="https://api.lorem.space/image/shoes?w=400&h=225" alt="Shoes" /></figure>
             <div class="card-body">
-              <h2 class="card-title">Card title!</h2>
+              <h2 class="card-title">Another really important and cool thing we do </h2>
               <p>If a dog chews shoes whose shoes does he choose?</p>
               <div class="card-actions">
               </div>
@@ -57,7 +61,7 @@
         <h3 class="m-8 " id="about-me">about section</h3>
         <p class="p-8">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur.</p>
     </div>
-    </main>
+  
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="/public/js/homepage.js"></script>
