initiate modal display after elapsed time

--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -1,3 +1,14 @@
+<div class="modal-container" id="modal-container">
+  <div class="modal-card">
+    <h1>Models are Cool</h1>
+    <p>Lorem Ipsum</p>
+    <button class="btn btn-primary" id="continue">
+      Continue Coding
+    </button>
+  </div>
+</div>
+
+
 <h2 class="card-title">This Project Name</h2>
 <div class="flex flex-col w-full lg:flex-row">
   
@@ -40,23 +51,6 @@
             <button class="btn btn-sm">Complete</button> 
           </div>
       </div>
-
-<div class="modal" id="my-modal-2">
-  <div class="modal-box">
-    <h3 class="font-bold text-lg">Time for a break!</h3>
-    <p class="py-4">Here are some exercises for you</p>
-    <div class="modal-action">
-     <a href="#" class="btn" onclick="startTimer()">Keep Coding</a>
-    </div>
-  </div>
-</div>
-
-
-
-
-
-
-
   
 </div>
 
