--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,43 @@
 #gitlogo {
     border: 1em;
 }
+
+.modal-container {
+    display: none;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba( 0, 0, 0, 0.3);
+    ponter-events: none;
+    transition: opacity 0.3s ease;
+    z-index: 2;
+}
+
+.modal-container.show {
+    pointer-events: auto;
+    opacity: 1;
+    display: flex;
+}
+
+.modal-card {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    background-color: white;
+    width: 600px;
+    height: 300px;
+    max-width: 100%;
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.modal-card h1 {
+    font-size: 16px;
+}
+
