initiate functionality to keep total time logged

--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -19,6 +19,11 @@
       <div id="timer">
         00:00:00
       </div>
+      <div id="total-time">
+        <p id="second-total">0</p>
+        <p id="minute-total">0</p>
+        <p id="hour-total">0</p>
+      </div>
       <ul>
         <li><button class="btn btn-outline btn-primary" onclick="startTimer()">Start</button></li>
         <li><button class="btn btn-outline btn-secondary" onclick="stopTimer()">Stop</button></li>
