add functionality to homepage, add background image to landing page

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,16 +1,16 @@
 
     
-        <div class="flex flex-row mt-48">
-        <div class="mt-24 ml-20">
-            <h2>Git Productive With Us!</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+        <div style="background-image: linear-gradient(rgba(35, 18, 56, 0.8), rgba(2, 2, 71, 0.8)), url(/images/codepicture.jpg); background-size:cover; height: 100vh;">
+        <div>
+            <h1 id="animateMe">Git Productive With Us</h1>
+            <h2>other words that are meaningful and fun!</h2>
             <button class="btn"><a href="#about-me">Button</a></button>
         </div>
-        <img id="homepageImage" src="images/code-pic.jpg" alt="homepage coding image">
         </div>
+
      
 <!-- info cards -->
-    <div class="flex flex-row">
+    <div class="info-cards flex flex-row">
         <!-- info card 1 -->
         <div class="card w-96 bg-neutral shadow-xl basis-1/4 infocard m-2">
         <figure><img src="/images/stayactive.PNG" alt="dont quit sign" width="455px" height="250px"/></figure>
@@ -64,4 +64,5 @@
   
 
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="/public/js/homepage.js"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="/js/homepage.js"></script>
