--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,3 +6,18 @@
     width: 100%;
     height: 100%;
 }
+
+#animateMe {
+    color: #fff;
+    font-weight: 800;
+    font-size: 5vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-family: "Khula", sans-serif;
+    height: 100vh;
+    box-sizing: border-box;
+    margin: 0;
+  }
+
