--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@2.14.3/dist/full.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <header>
@@ -24,9 +25,9 @@
             </div>
             <div class="navbar-end">
               {{#if loggedIn}}
-              <a class="btn mr-8" href="/" id="logout">Logout</a>
+              <a class="btn btn-primary mr-8" href="/" id="logout">Logout</a>
               {{else}}
-              <a class="btn mr-8" href="/login">Login</a>
+              <a class="btn btn-primary mr-8" href="/login">Login</a>
               {{/if}}
             </div>
           </div>
@@ -53,6 +54,11 @@
             </div>
         </footer>
     <script src="https://cdn.tailwindcss.com"></script>
+     <script src="https://unpkg.com/scrollreveal"></script>
+     <script src="https://cdn.jsdelivr.net/npm/animejs@3.0.1/lib/anime.min.js"></script>
+    <script src="/js/homepage.js"></script>
+    <script src="/js/main.js"></script>
+    
 
     {{#if loggedIn}}
       <script src="/js/logout.js"></script>
