--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -2,10 +2,10 @@
 <div class="flex flex-col w-full lg:flex-row">
     
     <div class="grid flex-grow card bg-base-300 rounded-box place-items-center">
-        <div class="card w-96 bg-base-100 shadow-xl project-list">
+        <div class="card w-96 bg-base-100 shadow-xl">
             <div class="card-body">
                 <div>
-                    <h3 class="card-title">Current Projects</h3>
+                    <h3 class="card-title mb-8" style="font-size:28px">Current Projects</h3>
                     {{#if projects.length}}
                     <div class="overflow-x-auto">
                       <table class="table w-full">
@@ -22,7 +22,7 @@
                           <tr class="hover">
                             <th>{{project.id}}</th>
                             <td><a href="/project/{{project.id}}" class="basis-3/4">{{project.name}}</a></td>
-                            <td><button class="basis-1/4">Delete</button></td>
+                            <td><button class="basis-1/4 project-list">Delete</button></td>
                           </tr>
                         </tbody>
                         {{/each}}
@@ -34,26 +34,27 @@
         </div>
     </div>
 
-    <div class="divider">|</div> 
+    <div class="divider">  </div> 
 
     <div class="grid flex-grow card bg-base-300 rounded-box place-items-center">
         
         <div class="card w-96 bg-base-100 shadow-xl">
             <div class="card-body">
-            <h2 class="card-title">Create a new Project</h2>
+            <h2 class="card-title" style="font-size:28px">Create a new Project</h2>
             <form class="form-control w-full max-w-xs new-project-form">
                 <label class="label" for="new-project-name">
-                    <span class="label-text">Project name</span>
+                    <span class="label-text">Project Name</span>
                 </label>
-                <input type="text" placeholder="enter a name for your project" class="input input-bordered w-full max-w-xs" id="new-project-name"/>
+                <input  id="new-project-name" type="text" placeholder="Name of your project" class="input input-bordered text-primary-content input-primary w-full max-w-xs" />
                 <label class="label" for="new-project-description">
-                    <span class="label-text">Short description</span>
+                    <span class="label-text">Description</span>
                 </label>
-                <input type="text" placeholder="Type here" class="input input-bordered w-full max-w-xs" id="new-project-description"/>
-            </form>  
+                <textarea id="new-project-description" height="50px" class="textarea text-primary-content textarea-primary" placeholder="Short description of your project"></textarea>
+        
             <div class="card-actions justify-center">
-                <button class="btn btn-primary" type="submit">Create Project</button>
+                <button class="btn btn-primary btn-active hover:bg-primary mt-4" type="submit">Create Project</button><br>
             </div>
+            </form>  
             </div>
         </div>
 
