fix homepage buttons to show within conditonal statements, fix hbs for main and homepage

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,8 +3,7 @@
         <div style="background-image: linear-gradient(rgba(35, 18, 56, 0.8), rgba(2, 2, 71, 0.8)), url(/images/codepicture.jpg); background-size:cover; height: 100vh;">
         <div>
             <h1 id="animateMe">Git Productive With Us</h1>
-            <h2>other words that are meaningful and fun!</h2>
-            <button class="btn"><a href="#about-me">Button</a></button>
+            {{!-- <button id="animateMe" class="btn"><a href="#about-me">Button</a></button> --}}
         </div>
         </div>
 
