--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,8 @@
             </div>
             <div class="navbar-end">
               {{#if loggedIn}}
-              <a class="btn btn-primary mr-8" href="/" id="logout">Logout</a>
+              <a class="btn btn-primary btn-12 custom-btn mr-8" href="/profile" id="profile">My Profile</a>
+              <a class="btn btn-primary btn-12 custom-btn mr-8" href="/" id="logout">Logout</a>
               {{else}}
               <a class="btn btn-primary mr-8" href="/login">Login</a>
               {{/if}}
