--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,7 +30,7 @@
     height: 100vh;
     width: 100vw;
     background-color: rgba( 0, 0, 0, 0.3);
-    ponter-events: none;
+    pointer-events: none;
     transition: opacity 0.3s ease;
     z-index: 2;
 }
