initiate function to save time to db

--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -46,7 +46,7 @@
             </div>
           </div>
           <div class="stat-actions">
-            <button class="btn btn-sm btn-success">-</button>
+            <button class="btn btn-sm btn-success" id="save-time">Save Time</button>
           </div>
         </div>
       
@@ -103,5 +103,5 @@
 
 </div>
 
-<script src="/js/timer.js"></script>
+<script src="/js/project.js"></script>
 <script src="https://cdn.tailwindcss.com"></script>
