fix Code syntax error

--- a/views/codeSnippet.handlebars
+++ b/views/codeSnippet.handlebars
@@ -35,8 +35,11 @@
     </div>
   </div>
 
+{{!-- grabbing from the code snippet partial page for the page to render --}}
 <section class="code">
   {{> codePartial code}}
 </section>
 
 </div>
+
+<script src="/js/code.js"></script>
