--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,9 +42,9 @@
 }
 
 .modal-card {
-    background-color: white;
+    background-color: rgba(65, 69, 185, 0.481);
     width: 600px;
-    height: 300px;
+    height: 650px;
     max-width: 100%;
     padding: 30px;
     border-radius: 5px;
