add styling to code snippet page, change syntax in hbs page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -60,6 +60,14 @@
 }
 
 .code-cards {
+    justify-content: center;
     min-width: 300px;
-    min-height: 500px;
+    min-height: 600px;
+}
+
+.rendered-code {
+    justify-content: center;
+    min-height: 600px;
+    width: 900px;
+    margin: 20px;
 }
