--- a/views/codeSnippet.handlebars
+++ b/views/codeSnippet.handlebars
@@ -54,7 +54,7 @@
 
 {{!-- grabbing from the code snippet partial page for the page to render --}}
   {{!-- render code snippet card --}}
-<div class="mockup-code">
+<div class="mockup-code rendered-code">
   <h2>{{code.title}}</h2>
   <h3>{{code.description}}</h3>
   <pre data-prefix="$"><code>{{code.content}}</code></pre> 
