fix formatting issue with logged timer

--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -246,11 +246,11 @@
 
       <div class="stats bg-primary text-primary-content">
         <div class="stat">
-          <div class="stat-title">Hours Logged</div>
+          <div class="stat-title">Time Logged</div>
           <div class="stat-value">
             <div id="total-time">
-              <p id="hour-total">0 </p>
-              <p id="minute-total"> : 0 : </p>
+              <p id="hour-total">0</p><p>:</p>
+              <p id="minute-total">0</p><p>:</p>
               <p id="second-total">0</p>
             </div>
           </div>
