add styling to homepage

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,7 +3,8 @@
         <div style="background-image: linear-gradient(rgba(35, 18, 56, 0.8), rgba(2, 2, 71, 0.8)), url(/images/codepicture.jpg); background-size:cover; height: 100vh;">
         <div>
             <h1 id="animateMe">Git Productive With Us</h1>
-            {{!-- <button id="animateMe" class="btn"><a href="#about-me">Button</a></button> --}}
+            <h2 class="homeinfo">Never fall behind on a project again with a built in time and project management system built for web developers!</h2>
+            <button class="btn homeinfo"><a href="#about-me">Button</a></button>
         </div>
         </div>
 
@@ -11,8 +12,8 @@
 <!-- info cards -->
     <div class="info-cards flex flex-row">
         <!-- info card 1 -->
-        <div class="card w-96 bg-neutral shadow-xl basis-1/4 infocard m-2">
-        <figure><img src="/images/stayactive.PNG" alt="dont quit sign" width="455px" height="250px"/></figure>
+        <div class="card bg-neutral basis-1/4 infocard m-2">
+        <figure><img src="/images/getactivelogo.png" alt="dont quit sign" width="200px" height="50px" style="border-radius: 1em;" class="mt-4"/></figure>
             <div class="card-body">
               <h2 class="card-title">Get Active!</h2>
               <p> Do you ever feel stiff by the end of your work day from sitting in the same spot for eight hours straight? No worries, we got you! Add Git Produtive to your technologies used because we will be your guide from start to finish in your project, letting you know when it is time to get up and move around your body. We have an exercise guide if you feel like you are not sure what to do.</p>
@@ -22,30 +23,30 @@
           </div>
     
         <!-- info card 2 -->
-          <div class="card w-96 bg-neutral shadow-xl basis-1/4 infocard m-2">
-          <figure><img src="images/bestpart1.PNG" alt="best part image" width="455px" height="250px"/></figure>
+          <div class="card bg-neutral shadow-xl basis-1/4 infocard m-2">
+          <figure><img src="images/bestpartt.png" alt="best part image" width="200px" height="50px" style="border-radius: 1em;" class="mt-4"/></figure>
             <div class="card-body">
               <h2 class="card-title">Keep Losing Code?</h2>
-              <p>If a dog chews shoes whose shoes does he choose?</p>
+              <p>Do you ever get a great idea on where to go next with a project and remember you have already done that before, but don't quit remember the syntax of it? Do not worry any longer about going through old repositories to get that specific code! With Git Productive you can save your significant code to reference later, clearly labeled. Its fool proof.</p>
               <div class="card-actions">
               </div>
             </div>
           </div>
 
           <!-- info card 3 -->
-          <div class="card w-96 bg-neutral shadow-xl basis-1/4 infocard m-2">
-          <figure><img src="images/dontquit.PNG" alt="Shoes" width="455px" height="250px"/></figure>
+          <div class="card bg-neutral shadow-xl basis-1/4 infocard m-2">
+          <figure><img src="images/stayorganizedlogo.png" alt="Shoes" width="200px" height="50px" style="border-radius: 1em;" class="mt-4"/></figure>
             <div class="card-body">
               <h2 class="card-title">Stay Organized Start To Finish</h2>
-              <p>If a dog chews shoes whose shoes does he choose?</p>
+              <p>One of main missions with Git Productive is to keep the highest level of organization from start to finish of your project. From free lance web developer to full time developer, this web app is for you. Track the amount of time spent on a project, get reminders to move around to get your blood still bumping, and have your personal rates generate through your specific project page. No matter where you are at  in your developer career, this app will keep you accountable for your day to day.</p>
               <div class="card-actions">
               </div>
             </div>
           </div>
 
           <!-- info card 4 -->
-          <div class="card w-96 bg-neutral shadow-xl basis-1/4 infocard m-2">
-          <figure><img src="https://api.lorem.space/image/shoes?w=400&h=225" alt="Shoes" /></figure>
+          <div class="card bg-neutral shadow-xl basis-1/4 infocard m-2">
+          <figure><img src="https://api.lorem.space/image/shoes?w=400&h=225" alt="Shoes" style="border-radius: 1em;" class="mt-4"/></figure>
             <div class="card-body">
               <h2 class="card-title">Another really important and cool thing we do </h2>
               <p>If a dog chews shoes whose shoes does he choose?</p>
@@ -57,7 +58,7 @@
 
     <!-- about the webpage sections -->
     <div class="flex flex-row">
-        <h3 class="m-8 " id="about-me">about section</h3>
+        <h3 class="m-8 " id="about-me">About Us</h3>
         <p class="p-8">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur.</p>
     </div>
   
