--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,7 @@
-#gitlogo {
+#gitLogo {
     border: 1em;
 }
-#homepageImage {
-    width: 100%;
-    height: 100%;
-}
+
 #animateMe {
     color: #fff;
     font-weight: 800;
@@ -19,6 +16,21 @@
     margin: 0;
     pointer-events: none;
   }
+  /* #heroSlogan {
+      
+  }
+
+  .homeinfo {
+    font-weight: normal;
+    font-size: large;
+} */
+
+#about-me {
+    font-size: 30px;
+    font-weight: bold;
+    border-right: 2px solid ;
+    padding: 20px;
+}
 
 .modal-container {
     display: none;
@@ -70,4 +82,9 @@
     min-height: 600px;
     width: 900px;
     margin: 20px;
+}
+
+.infocard {
+    height: fit-content;
+    width: 450px;
 }
