--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div class="navbar bg-base-200 neutral pt-4">
+        <div class="navbar-gitpro navbar bg-base-200 neutral pt-4">
             <div class="navbar-start">
               <div class="dropdown">
                 <label tabindex="0" class="btn btn-ghost lg:hidden">
