--- a/public/css/style.css
+++ b/public/css/style.css
@@ -60,7 +60,7 @@
 }
 
 .code-cards {
-    justify-content: center;
+    /* justify-content: center; */
     min-width: 300px;
     min-height: 600px;
 }
