add the the fourth info block styling

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -35,7 +35,7 @@
 
           <!-- info card 3 -->
           <div class="card bg-neutral shadow-xl basis-1/4 infocard m-2">
-          <figure><img src="images/stayorganizedlogo.png" alt="Shoes" width="200px" height="50px" style="border-radius: 1em;" class="mt-4"/></figure>
+          <figure><img src="images/stayorganizedlogo.png" alt="Stay Organized Logo" width="200px" height="50px" style="border-radius: 1em;" class="mt-4"/></figure>
             <div class="card-body">
               <h2 class="card-title">Stay Organized Start To Finish</h2>
               <p>One of main missions with Git Productive is to keep the highest level of organization from start to finish of your project. From free lance web developer to full time developer, this web app is for you. Track the amount of time spent on a project, get reminders to move around to get your blood still bumping, and have your personal rates generate through your specific project page. No matter where you are at  in your developer career, this app will keep you accountable for your day to day.</p>
@@ -46,10 +46,10 @@
 
           <!-- info card 4 -->
           <div class="card bg-neutral shadow-xl basis-1/4 infocard m-2">
-          <figure><img src="https://api.lorem.space/image/shoes?w=400&h=225" alt="Shoes" style="border-radius: 1em;" class="mt-4"/></figure>
+          <figure><img src="images/getstarted.png" alt="Get Started Logo"  width="200px" height="50px" style="border-radius: 1em;" style="border-radius: 1em;" class="mt-4"/></figure>
             <div class="card-body">
-              <h2 class="card-title">Another really important and cool thing we do </h2>
-              <p>If a dog chews shoes whose shoes does he choose?</p>
+              <h2 class="card-title">Get Started Today </h2>
+              <p>If you are completely sold on how great this web app is and why you need it, click the login button in the corner to direct you to the sign up page and get started tracking your projects with Git Productive!</p>
               <div class="card-actions">
               </div>
             </div>
