--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -1,50 +1,54 @@
 <div class="modal-container"  id="modal-container">
   <div class="modal-card w-6/12">
   {{> activities}}
-  <div  class="flex justify-center w-full mt-8">
-    <button class="btn btn-primary text-primary-content" id="continue">
-      Continue Coding
-    </button>
+    <div  class="flex justify-center w-full mt-8">
+      <button class="btn btn-primary text-primary-content" id="continue">
+        Continue Coding
+      </button>
     </div>
   </div>
-
 </div>
 
+<div class="flex justify-center">
+  <h2 class="card-title" style="font-size: 50px;margin: 40px 0;">{{this.name}}</h2>
+</div>
 
-<h2 class="card-title">This Project Name</h2>
-<div class="flex flex-col w-full lg:flex-row">
+<div class="flex flex-row w-full lg:flex-row">
   
-  <div class="grid flex-grow card bg-base-300 rounded-box place-items-center">
+  <div class="grid flex-grow card bg-base-300 rounded-box place-items-center" style="padding: 40px;">
     
-    <div class="card w-96 bg-base-100 shadow-xl project-list flex justify-center">
-      <h2 class="card-title">Timer</h2>
-      <div id="timer">
+    <div class="card w-96 bg-base-100 shadow-xl project-list flex justify-center" style="width: 500px;">
+      <h2 class="card-title" style="margin-top: 10px; align-self: center">Timer</h2>
+      <div id="timer" style="align-self: center;font-family: 'Orbitron', sans-serif;font-size: 50px;color:#00FF1A
+;margin:">
         00:00:00
       </div>
-
-
-      <div class="form-control">
-        <div class="input-group">
-          <input type="text" placeholder="How often should you take a break?" class="input input-bordered input-primary w-full max-w-xs" id="break-input"/>
+      <div class="form-control" style="align-self: center;margin: 5px;">
+        <div style="width: 250px">
+          <input type="text" placeholder="How often will you break?" class="input input-bordered input-primary w-full max-w-xs" id="break-input" styles="margin: 5px;"/>
         </div>
       </div>
-      <div class="form-control">
-        <div class="input-group">
-          <input type="text" placeholder="How often should you take a break?" class="input input-bordered input-primary w-full max-w-xs" id="rate-input"/>
+      <div class="form-control" style="align-self: center;margin: 10px;">
+        <div style="width: 250px">
+          <input type="text" placeholder="Enter your hourly rate" class="input input-bordered input-primary w-full max-w-xs" id="rate-input" styles="margin: 10px;"/>
         </div>
       </div>
-      <button class="btn btn-square" onclick="startTimer()">Start Timer</button>
+      <div class="flex justify-center" style="">
+        <button class="btn btn-square" onclick="startTimer()" style="width: 120px; margin-bottom: 10px;">Start Timer</button>
+      </div>
 
-
-
-      <div class="stats bg-primary text-primary-content">
+      <div class="stats bg-primary text-primary-content" style="margin: 10px;">
         <div class="stat">
-          <div class="stat-title">Time Logged</div>
+          <div class="stat-title">
+            Time Logged
+          </div>
           <div class="stat-value">
-            <div id="total-time">
-              <p id="hour-total">0</p><p>:</p>
-              <p id="minute-total">0</p><p>:</p>
-              <p id="second-total">0</p>
+            <div id="total-time" style="margin-top: 5px;">
+              <p id="hour-total">{{this.hr}}</p>
+              <p>:</p>
+              <p id="minute-total">{{this.min}}</p>
+              <p>:</p>
+              <p id="second-total">{{this.sec}}</p>
             </div>
           </div>
           <div class="stat-actions">
@@ -54,52 +58,43 @@
       
         <div class="stat">
           <div class="stat-title">Current Charge</div>
-          <div class="flex flex-row">
-            <div class="stat-value">$<p id="earned-wage">{{this.wage}}</p></div>
+            <div class="flex" style="flex-direction: row;">
+              <p style="font-size: 2.5rem;">$</p>
+              <p id="earned-wage" style="font-size: 2.5rem">{{this.wage}}</p>
+            </div>
           </div>
-      </div>
-  
-</div>
-
-
-      <div tabindex="0" class="collapse collapse-arrow border border-base-300 bg-base-100 rounded-box">
-        <div class="collapse-title text-xl font-medium">
-          Name of first node module
-        </div>
-        <div class="collapse-content text-primary-content peer-checked:bg-secondary peer-checked:text-secondary-content"> 
-          <p>Install command</p>
-          <p>Link to</p>
         </div>
       </div>
-    
+    {{!-- end card --}}
     </div>
 
   </div>
+
   <div class="grid flex-grow card bg-base-300 rounded-box place-items-center">
          
-    <div class="card w-96 bg-base-100 shadow-xl">
-      <div class="card-body">
-      <h2 class="card-title">Add node module</h2>    
-        <form class="form-control w-full max-w-xs new-project-form">
-          <label class="label" for="new-module-name">
-            <span class="label-text">Module name</span>
-          </label>
-          <input type="text" placeholder="enter the name of the module" class="input input-bordered w-full max-w-xs" id="new-module-name"/>
-          <label class="label" for="new-module-install">
-            <span class="label-text">Install command</span>
-          </label>
-          <input type="text" placeholder="enter the command to install the module" class="input input-bordered w-full max-w-xs" id="new-module-install"/>
-          <label class="label" for="new-module-docs">
-            <span class="label-text">Documentation link</span>
-          </label>
-          <input type="text" placeholder="enter the link to this module's docs" class="input input-bordered w-full max-w-xs" id="new-module-docs"/>
-        </form>    
-        <div class="card-actions justify-center">
-            <button class="btn btn-primary" type="submit">Add Module</button>
-        </div>
+  <div class="card w-96 bg-base-100 shadow-xl" style="width: 300px;">
+    <div class="card-body">
+    <h2 class="card-title">Add node module</h2>    
+      <form class="form-control w-full max-w-xs new-project-form">
+        <label class="label" for="new-module-name">
+          <span class="label-text">Module name</span>
+        </label>
+        <input type="text" placeholder="enter the name of the module" class="input input-bordered w-full max-w-xs" id="new-module-name"/>
+        <label class="label" for="new-module-install">
+          <span class="label-text">Install command</span>
+        </label>
+        <input type="text" placeholder="enter the command to install the module" class="input input-bordered w-full max-w-xs" id="new-module-install"/>
+        <label class="label" for="new-module-docs">
+          <span class="label-text">Documentation link</span>
+        </label>
+        <input type="text" placeholder="enter the link to this module's docs" class="input input-bordered w-full max-w-xs" id="new-module-docs"/>
+      </form>    
+      <div class="card-actions justify-center">
+          <button class="btn btn-primary" type="submit">
+            Add Module
+          </button>
       </div>
     </div>
-
   </div>
 
 </div>
