--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -2,7 +2,7 @@
 <div class="flex flex-col w-full lg:flex-row">
     
     <div class="grid flex-grow card bg-base-300 rounded-box place-items-center">
-        <div class="card w-96 bg-base-100 shadow-xl">
+        <div class="card w-96 bg-base-100 shadow-xl mt-8 mb-8">
             <div class="card-body">
                 <div>
                     <h3 class="card-title mb-8" style="font-size:28px">Current Projects</h3>
@@ -36,7 +36,7 @@
 
     <div class="grid flex-grow card bg-base-300 rounded-box place-items-center">
         
-        <div class="card w-96 bg-base-100 shadow-xl">
+        <div class="card w-96 bg-base-100 shadow-xl mt-8 mb-8">
             <div class="card-body">
             <h2 class="card-title" style="font-size:28px">Create a new Project</h2>
             <form class="form-control w-full max-w-xs new-project-form">
@@ -60,4 +60,85 @@
 
 </div>
 
+ <div class="mt-12">
+    <h2 class="card-title mb-8 justify-center" style="font-size:28px">Project Summary</h2>
+      <div class="flex justify-center">
+        <div style="width:75%;"> 
+            <canvas id="chart"></canvas> 
+        </div> 
+      </div>
+</div>
+
+
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> 
+      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.bundle.js"></script> 
+      <script type="text/javascript">
+    window.onload=function(){
+var canvas = document.getElementById('chart');
+
+
+
+new Chart(canvas, {
+  type: 'bar',
+  data: {
+    labels: ['Project 1', 'Project 2', 'Project 3', 'Project 4', 'Project 5'],
+    datasets: [{
+      label: 'Time Spent',
+      yAxisID: 'A',
+      data: [5, 4, 7, 3, 2],
+      backgroundColor:'rgba(31, 255, 90, 0.8)',
+      hoverBackgroundColor: 'rgba(26, 199, 72, 0.8)'
+    }, {
+      label: 'Wages Earned',
+      yAxisID: 'B',
+      data: [100, 50, 43, 64, 89],
+      backgroundColor:'rgba(113, 70, 242, 0.9)'
+    }]
+  },
+  options: {
+    title: {
+      display: false,
+      text: 'Project Summary',
+      fontSize: 24,
+    },
+    scales: {
+      yAxes: [{
+        id: 'A',
+        type: 'linear',
+        position: 'left',
+        gridLines: {
+          display: false,},
+        ticks: {
+          min: 0
+        },
+        scaleLabel: {
+            display: true,
+            labelString: 'Hours Spent on Project (Hours)',
+          },
+      }, {
+        id: 'B',
+        type: 'linear',
+        position: 'right',
+        gridLines: {
+          display: false,},
+          scaleLabel: {
+            display: true,
+            labelString: 'Wages Earned from Project ($)',
+          },
+        ticks: {
+          min: 0,
+          callback: function(value, index, ticks) {
+                        return '$' + value;
+        }}
+      }]
+    }
+  }
+});
+    }
+
+    Chart.Legend.prototype.afterFit = function() {
+    this.height = this.height + 50;
+};
+
+      </script> 
 <script src="/js/profile.js"></script>
