add padding to code snippet page, change anime js functions

--- a/views/singleCode.handlebars
+++ b/views/singleCode.handlebars
@@ -57,9 +57,9 @@
 {{!-- grabbing from the code snippet partial page for the page to render --}}
   {{!-- render code snippet card --}}
 <div class="mockup-code rendered-code">
-  <h2>{{this.title}}</h2>
-  <h3>{{this.description}}</h3>
-  <pre data-prefix="$"><code>{{this.content}}</code></pre> 
+  <h2 class="pl-8 pt-4 font-bold text-lg">{{this.title}}</h2>
+  <h3 class="pl-8 pt-4 font-medium">{{this.description}}</h3>
+  <pre class="pl-8 pt-4" data-prefix="$"><code>{{this.content}}</code></pre> 
 </div>
 </div>
 <script src="/js/code.js"></script>
