--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -10,7 +10,7 @@
 
      
 <!-- info cards -->
-    <div class="info-cards flex flex-row">
+    <div class="info-cards flex flex-row" style="flex-wrap: wrap; justify-content: space-evenly;">
         <!-- info card 1 -->
         <div class="card bg-neutral basis-1/4 infocard m-2">
         <figure><img src="/images/getactivelogo.png" alt="dont quit sign" width="200px" height="50px" style="border-radius: 1em;" class="mt-4"/></figure>
