--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,11 +1,9 @@
 
     
-        <div style="background-image: linear-gradient(rgba(35, 18, 56, 0.8), rgba(2, 2, 71, 0.8)), url(/images/codepicture.jpg); background-size:cover; height: 100vh;">
-        <div>
-            <h1 id="animateMe">Git Productive With Us</h1>
-            <h2 class="homeinfo">Never fall behind on a project again with a built in time and project management system built for web developers!</h2>
-            <button class="btn homeinfo"><a href="#about-me">Button</a></button>
-        </div>
+        <div style="background-image: linear-gradient(rgba(35, 18, 56, 0.8), rgba(2, 2, 71, 0.8)), url(/images/codepicture.jpg); background-size:cover; height: 100vh; padding-top: 100px; display: flex; align-items: center; flex-direction: column;">
+            <h1 id="animateMe" style="height: 200px; margin-top: 0px;">Git Productive With Us</h1>
+            <h2 id="animateMe" class="homeinfo" style="font-size: 30px; height: 20px; width: 70%;">Never fall behind on a project again with a built in time and project management system built for web developers!</h2>
+            <button id="animateMe" class="btn homeinfo" style="height: 20px; font-size: 16px; margin-top: 60px;"><a href="#about-me">Learn More</a></button>
         </div>
 
      
