--- a/views/singleCode.handlebars
+++ b/views/singleCode.handlebars
@@ -5,6 +5,8 @@
       <h2 class="card-title">Code Snippets!</h2>
       <!-- The button to open modal -->
 <label for="my-modal-5" class="btn modal-button">Create New Code</label>
+<a class="btn modal-button" href="/code" id="profile">View All</a>
+
 
 <!-- Put this part before </body> tag -->
   <form>
