--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,14 +3,16 @@
         <div style="background-image: linear-gradient(rgba(35, 18, 56, 0.8), rgba(2, 2, 71, 0.8)), url(/images/codepicture.jpg); background-size:cover; height: 100vh; padding-top: 100px; display: flex; align-items: center; flex-direction: column;">
             <h1 id="animateMe" style="height: 200px; margin-top: 0px;">Git Productive With Us</h1>
             <h2 id="animateMe" class="homeinfo" style="font-size: 30px; height: 20px; width: 70%;">Never fall behind on a project again with a built in time and project management system built for web developers!</h2>
-            <button id="animateMe" class="btn homeinfo" style="height: 20px; font-size: 16px; margin-top: 60px;"><a href="#about-me">Learn More</a></button>
+            <a href='/#info-cards'>
+              <button id="animateMe" class="btn homeinfo" style="height: 20px; font-size: 16px; margin-top: 60px;">Learn More</button>
+            </a>
         </div>
 
      
 <!-- info cards -->
-    <div class="info-cards flex flex-row" style="flex-wrap: wrap; justify-content: space-evenly;">
+    <div class="info-cards flex flex-row" style="justify-content: space-evenly;" id="info-cards">
         <!-- info card 1 -->
-        <div class="card bg-neutral basis-1/4 infocard m-2">
+        <div class="card bg-neutral basis-1/4 infocard m-2"  style="min-width: 50px; width: 150px; margin: 0 20px 0 50px;">
         <figure><img src="/images/getactivelogo.png" alt="dont quit sign" width="200px" height="50px" style="border-radius: 1em;" class="mt-4"/></figure>
             <div class="card-body">
               <h2 class="card-title">Get Active!</h2>
@@ -21,7 +23,7 @@
           </div>
     
         <!-- info card 2 -->
-          <div class="card bg-neutral shadow-xl basis-1/4 infocard m-2">
+          <div class="card bg-neutral shadow-xl basis-1/4 infocard m-2"  style="min-width: 100px; width: 150px; margin: 0 20px;">
           <figure><img src="images/bestpartt.png" alt="best part image" width="200px" height="50px" style="border-radius: 1em;" class="mt-4"/></figure>
             <div class="card-body">
               <h2 class="card-title">Keep Losing Code?</h2>
@@ -32,7 +34,7 @@
           </div>
 
           <!-- info card 3 -->
-          <div class="card bg-neutral shadow-xl basis-1/4 infocard m-2">
+          <div class="card bg-neutral shadow-xl basis-1/4 infocard m-2"  style="min-width: 100px; width: 150px; margin: 0 20px;">
           <figure><img src="images/stayorganizedlogo.png" alt="Stay Organized Logo" width="200px" height="50px" style="border-radius: 1em;" class="mt-4"/></figure>
             <div class="card-body">
               <h2 class="card-title">Stay Organized Start To Finish</h2>
@@ -43,7 +45,7 @@
           </div>
 
           <!-- info card 4 -->
-          <div class="card bg-neutral shadow-xl basis-1/4 infocard m-2">
+          <div class="card bg-neutral shadow-xl basis-1/4 infocard m-2" style="min-width: 100px; width: 150px; margin: 0 50px 0 20px;">
           <figure><img src="images/getstarted.png" alt="Get Started Logo"  width="200px" height="50px" style="border-radius: 1em;" style="border-radius: 1em;" class="mt-4"/></figure>
             <div class="card-body">
               <h2 class="card-title">Get Started Today </h2>
