improve formatting of code and remove unused code

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,11 @@
 #gitLogo {
-    border: 1em;
+    border-radius: 150px;
+    width: 100px;
+}
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
 }
 
 #animateMe {
