--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,13 +9,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/mediaqueries.css">
 </head>
 <body>
   <header>
 
-    <div class="navbar-gitpro navbar bg-base-200 neutral pt-4">
+    <div class="navbar bg-base-200 neutral pt-4">
 
-      <a href="/" class=" normal-case text-xl ml-8">
+      <a href="/" class=" normal-case text-xl">
         <img id="gitLogo" src="/images/gitprologo.png" width="150px" height="150px">
       </a>
 
@@ -28,8 +29,9 @@
         <a class="btn btn-primary mr-8" href="/login">Login</a>
         {{/if}}
       </div>
+
     </div>
-    
+
   </header>
 
   <main>
