--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,73 +1,88 @@
 
-        
-        
-        
-        
-        
-        
-  <div style="background-image: linear-gradient(rgba(35, 18, 56, 0.8), rgba(2, 2, 71, 0.8)), url(/images/codepicture.jpg); background-size:cover; height: 100vh; padding-top: 100px; display: flex; align-items: center; flex-direction: column;">
-    <h1 id="animateMe" style="height: 200px; margin-top: 0px;">Git Productive With Us</h1>
-    <h2 id="animateMe" class="homeinfo" style="font-size: 30px; height: 20px; width: 70%;">Never fall behind on a project again with a built in time and project management system built for web developers!</h2>
-    <a href='/#info-cards'>
-      <button id="animateMe" class="btn homeinfo" style="height: 20px; font-size: 16px; margin-top: 60px;">Learn More</button>
-    </a>
+  <!-- hero section -->    
+  <div style="background-image: linear-gradient(rgba(35, 18, 56, 0.8), rgba(2, 2, 71, 0.8)), url(/images/codepicture.jpg); background-size: cover; height: 100vh; position: absolute; top: 0; padding: 120px 0 0 0;">
+    <div class="hero-content-wrap">
+      <h1 id="animateMe" class="hero-title">
+        Git Productive With Us
+      </h1>
+      <h2 id="animateMe" class="hero-info">
+        Never fall behind on a project again with a built in time and project management system built for web developers!
+      </h2>
+      <a href='/#info-cards' class="info-button">
+        <button id="animateMe" class="btn homeinfo" style="height: 20px; font-size: 16px;">
+          Learn More
+        </button>
+      </a>
+    </div>
   </div>
 
-     
-<!-- info cards -->
-    <div class="info-cards flex flex-row" style="justify-content: space-evenly;" id="info-cards">
-        <!-- info card 1 -->
-        <div class="card bg-neutral basis-1/4 infocard m-2"  style="min-width: 50px; width: 150px; margin: 0 20px 0 50px;">
-        <figure><img src="/images/getactivelogo.png" alt="dont quit sign" width="200px" height="50px" style="border-radius: 1em;" class="mt-4"/></figure>
-            <div class="card-body">
-              <h2 class="card-title">Get Active!</h2>
-              <p> Do you ever feel stiff by the end of your work day from sitting in the same spot for eight hours straight? No worries, we got you! Add Git Produtive to your technologies used because we will be your guide from start to finish in your project, letting you know when it is time to get up and move around your body. We have an exercise guide if you feel like you are not sure what to do.</p>
-              <div class="card-actions">
-              </div>
-            </div>
-          </div>
-    
-        <!-- info card 2 -->
-          <div class="card bg-neutral shadow-xl basis-1/4 infocard m-2"  style="min-width: 100px; width: 150px; margin: 0 20px;">
-          <figure><img src="images/bestpartt.png" alt="best part image" width="200px" height="50px" style="border-radius: 1em;" class="mt-4"/></figure>
-            <div class="card-body">
-              <h2 class="card-title">Keep Losing Code?</h2>
-              <p>Do you ever get a great idea on where to go next with a project and remember you have already done that before, but don't quit remember the syntax of it? Do not worry any longer about going through old repositories to get that specific code! With Git Productive you can save your significant code to reference later, clearly labeled. Its fool proof.</p>
-              <div class="card-actions">
-              </div>
-            </div>
-          </div>
+  <!-- info cards -->
+  <div class="info-cards" style="justify-content: space-evenly; margin-top: 100vh; padding: 30px 0 0 0;" id="info-cards">
 
-          <!-- info card 3 -->
-          <div class="card bg-neutral shadow-xl basis-1/4 infocard m-2"  style="min-width: 100px; width: 150px; margin: 0 20px;">
-          <figure><img src="images/stayorganizedlogo.png" alt="Stay Organized Logo" width="200px" height="50px" style="border-radius: 1em;" class="mt-4"/></figure>
-            <div class="card-body">
-              <h2 class="card-title">Stay Organized Start To Finish</h2>
-              <p>One of main missions with Git Productive is to keep the highest level of organization from start to finish of your project. From free lance web developer to full time developer, this web app is for you. Track the amount of time spent on a project, get reminders to move around to get your blood still bumping, and have your personal rates generate through your specific project page. No matter where you are at  in your developer career, this app will keep you accountable for your day to day.</p>
-              <div class="card-actions">
-              </div>
-            </div>
-          </div>
-
-          <!-- info card 4 -->
-          <div class="card bg-neutral shadow-xl basis-1/4 infocard m-2" style="min-width: 100px; width: 150px; margin: 0 50px 0 20px;">
-          <figure><img src="images/getstarted.png" alt="Get Started Logo"  width="200px" height="50px" style="border-radius: 1em;" style="border-radius: 1em;" class="mt-4"/></figure>
-            <div class="card-body">
-              <h2 class="card-title">Get Started Today </h2>
-              <p>If you are completely sold on how great this web app is and why you need it, click the login button in the corner to direct you to the sign up page and get started tracking your projects with Git Productive!</p>
-              <div class="card-actions">
-              </div>
-            </div>
-          </div> 
-        </div>
-
-    <!-- about the webpage sections -->
-    <div class="flex flex-row">
-        <h3 class="m-8 " id="about-me">About Us</h3>
-        <p class="p-8">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur.</p>
+    <!-- info card 1 -->
+    <div class="card info-card bg-neutral shadow-xl">
+      <img  class="card-image" src="/images/getactivelogo.png" alt="dont quit sign" width="200px" height="50px"/>
+      <div class="info-card-body">
+        <h2 class="info-card-title">
+          Get Active!
+        </h2>
+        <p>
+          Do you ever feel stiff by the end of your work day from sitting in the same spot for eight hours straight? No worries, we got you! Add Git Produtive to your technologies used because our guidede exercises will let you know when it is time to get up and move your body.
+        </p>
+      </div>
     </div>
-  
+    
+    <!-- info card 2 -->
+    <div class="card info-card bg-neutral shadow-xl">
+      <img  class="card-image" src="images/bestpartt.png" alt="best part image" width="200px" height="50px"/>
+      <div class="info-card-body">
+        <h2 class="info-card-title">
+          Keep Losing Code?
+        </h2>
+        <p>
+          Do you ever need some code that you've written before, but don't quite remember the syntax of it? Don't worry about having to scour old repositories! With Git Productive you can save your significant code to reference later.
+        </p>
+      </div>
+    </div>
 
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="/js/homepage.js"></script>
+    <!-- info card 3 -->
+    <div class="card info-card bg-neutral shadow-xl">
+      <img  class="card-image" src="images/stayorganizedlogo.png" alt="Stay Organized Logo" width="200px" height="50px"/>
+      <div class="info-card-body">
+        <h2 class="info-card-title">
+          Stay Organized Start To Finish
+        </h2>
+        <p>
+          One of main missions with Git Productive is to keep your project organized from start to finish. From free lance to full time, this app is built for you. Track the amount of time spent on a project, get reminders to move around, and track the fees you generate on each project.
+        </p>
+      </div>
+    </div>
+
+    <!-- info card 4 -->
+    <div class="card info-card bg-neutral shadow-xl">
+      <img  class="card-image" src="images/getstarted.png" alt="Get Started Logo"  width="200px" height="50px"/>
+      <div class="info-card-body">
+        <h2 class="info-card-title">
+          Get Started Today
+        </h2>
+        <p>
+          If you are completely sold on how great this web app is and why you need it, click the login button in the corner to direct you to the sign up page and get started tracking your projects with Git Productive!
+        </p>
+      </div>
+    </div> 
+
+  </div>
+
+  <!-- about the webpage sections -->
+  <div class="about-wrap">
+    <h3 class="about-header">
+      About Us
+    </h3>
+    <p class="about-paragraph">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantiumconsequuntur.
+    </p>
+  </div>
+  
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://unpkg.com/scrollreveal"></script>
+  <script src="/js/homepage.js"></script>
